# CSCU9V4

Practical1/: CMakeLists.txt  main.c
Practical2/: CMakeLists.txt  UPC_CheckDigit.c  main.c  reverse.c
Practical3/: CMakeLists.txt  main.c  moreScanF.c
Practical4/: CMakeLists.txt  chessboard.c  main.c  repdigits1.c  repdigits2.c  repdigits3.c
Practical5/: CMakeLists.txt  amount.c  main.c
Practical6/: CMakeLists.txt  PenAndPaper.md  exercise1.c  main.c
Practical7/: CMakeLists.txt  PenAndPaper.md  main.c  question.c  question2.c
Practical8/: CMakeLists.txt  hexWitchCraft.c  main.c  my_wc.c  testHex.c
