cmake_minimum_required(VERSION 3.17)
project(Practical4 C)

set(CMAKE_C_STANDARD 99)

add_executable(Practical4 main.c repdigits3.c)
add_executable(Practical4_repDigits1 repdigits1.c)
add_executable(Practical4_repDigits2 repdigits2.c)
add_executable(Practical4_repDigits3 repdigits3.c)
add_executable(Practical4_chessboard chessboard.c)